--- a/Meems/Base.lproj/Main.storyboard
+++ b/Meems/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -19,30 +18,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eMb-iO-gNG">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <animations/>
-                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="19" translatesAutoresizingMaskIntoConstraints="NO" id="vGv-Hg-77Z">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="V3I-SG-uYq"/>
-                                    <constraint firstAttribute="width" constant="324" id="eG7-c4-Ccb"/>
+                                    <constraint firstAttribute="height" constant="30" id="Umr-EN-jVu"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Kailasa-Bold" family="Kailasa" pointSize="22"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="V3I-SG-uYq"/>
-                                        <exclude reference="eG7-c4-Ccb"/>
+                                        <exclude reference="Umr-EN-jVu"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="V3I-SG-uYq"/>
-                                        <include reference="eG7-c4-Ccb"/>
+                                        <include reference="Umr-EN-jVu"/>
                                     </mask>
                                 </variation>
                             </textField>
@@ -50,22 +42,19 @@
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="c6a-nB-M8H"/>
-                                    <constraint firstAttribute="width" constant="324" id="i1e-dH-pKc"/>
+                                    <constraint firstAttribute="height" constant="30" id="Xkc-ff-uJW"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Kailasa-Bold" family="Kailasa" pointSize="22"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="c6a-nB-M8H"/>
-                                        <exclude reference="i1e-dH-pKc"/>
+                                        <exclude reference="Xkc-ff-uJW"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="c6a-nB-M8H"/>
-                                        <include reference="i1e-dH-pKc"/>
+                                        <include reference="Xkc-ff-uJW"/>
                                     </mask>
                                 </variation>
                             </textField>
@@ -107,96 +96,83 @@
                                     <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="vMe-o1-9dC"/>
                                 </items>
                             </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eMb-iO-gNG">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                            </imageView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sk0-jV-q5f" secondAttribute="bottom" id="6BW-dC-kat"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6Ao-eN-PnZ" secondAttribute="trailing" constant="-20" id="8nU-8x-Fji"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="vGv-Hg-77Z" secondAttribute="trailing" constant="18" id="97v-28-dgh"/>
-                            <constraint firstItem="fey-0e-6k7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="DWa-Ll-8rr"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="sk0-jV-q5f" secondAttribute="trailing" constant="-20" id="Pf8-aD-FxE"/>
-                            <constraint firstItem="vGv-Hg-77Z" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="Rh2-IJ-dvg"/>
-                            <constraint firstItem="6Ao-eN-PnZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="VB1-ZY-VO4"/>
-                            <constraint firstItem="eMb-iO-gNG" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Wyl-5i-RLH"/>
-                            <constraint firstItem="sk0-jV-q5f" firstAttribute="top" secondItem="eMb-iO-gNG" secondAttribute="bottom" constant="24" id="Zx4-X5-l4U"/>
-                            <constraint firstItem="sk0-jV-q5f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="Zz7-FM-EfW"/>
-                            <constraint firstItem="vGv-Hg-77Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fma-bY-csO"/>
-                            <constraint firstItem="6Ao-eN-PnZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="h1P-E4-Lfh">
-                                <variation key="widthClass=compact" constant="20"/>
-                            </constraint>
-                            <constraint firstItem="sk0-jV-q5f" firstAttribute="top" secondItem="fey-0e-6k7" secondAttribute="bottom" constant="46" id="hTi-yw-daA">
-                                <variation key="widthClass=compact" constant="39"/>
-                            </constraint>
-                            <constraint firstItem="6Ao-eN-PnZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iPp-8w-UxF"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="fey-0e-6k7" secondAttribute="trailing" constant="18" id="kOU-ln-Qwj"/>
-                            <constraint firstItem="eMb-iO-gNG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="14" id="l8d-6K-9Kh">
-                                <variation key="widthClass=compact" constant="45"/>
-                            </constraint>
-                            <constraint firstItem="eMb-iO-gNG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="lSu-Cp-MX6"/>
-                            <constraint firstItem="fey-0e-6k7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sOd-ZW-HqT"/>
-                            <constraint firstItem="vGv-Hg-77Z" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="45" id="zH9-He-PJc">
-                                <variation key="widthClass=compact" constant="71"/>
-                            </constraint>
+                            <constraint firstItem="fey-0e-6k7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="6g9-7o-vXp"/>
+                            <constraint firstItem="eMb-iO-gNG" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="AxE-vx-eaK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6Ao-eN-PnZ" secondAttribute="trailing" constant="-20" id="HSx-7f-jqp"/>
+                            <constraint firstItem="eMb-iO-gNG" firstAttribute="top" secondItem="6Ao-eN-PnZ" secondAttribute="bottom" constant="2" id="N1e-Fm-cy9"/>
+                            <constraint firstItem="sk0-jV-q5f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="OVk-tT-Qqz"/>
+                            <constraint firstItem="6Ao-eN-PnZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="QDC-eQ-Z9e"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sk0-jV-q5f" secondAttribute="trailing" constant="-20" id="Sd3-Zg-U6p"/>
+                            <constraint firstItem="vGv-Hg-77Z" firstAttribute="top" secondItem="6Ao-eN-PnZ" secondAttribute="bottom" constant="27" id="Uck-um-I7A"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fey-0e-6k7" secondAttribute="trailing" constant="18" id="Urb-NB-RKg"/>
+                            <constraint firstItem="sk0-jV-q5f" firstAttribute="top" secondItem="fey-0e-6k7" secondAttribute="bottom" constant="39" id="Xqx-Ib-Dzh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vGv-Hg-77Z" secondAttribute="trailing" constant="18" id="YHG-RX-Brg"/>
+                            <constraint firstItem="6Ao-eN-PnZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ad7-zS-jIa"/>
+                            <constraint firstItem="eMb-iO-gNG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="d6B-r7-PHm"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sk0-jV-q5f" secondAttribute="bottom" id="den-Dh-kCF"/>
+                            <constraint firstItem="vGv-Hg-77Z" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="lDU-Yz-7Lv"/>
+                            <constraint firstItem="sk0-jV-q5f" firstAttribute="top" secondItem="eMb-iO-gNG" secondAttribute="bottom" constant="23" id="o2T-tM-zoZ"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="eMb-iO-gNG"/>
                                 <exclude reference="vGv-Hg-77Z"/>
                                 <exclude reference="fey-0e-6k7"/>
                                 <exclude reference="6Ao-eN-PnZ"/>
                                 <exclude reference="sk0-jV-q5f"/>
+                                <exclude reference="eMb-iO-gNG"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="6BW-dC-kat"/>
-                                <exclude reference="DWa-Ll-8rr"/>
-                                <exclude reference="kOU-ln-Qwj"/>
-                                <exclude reference="sOd-ZW-HqT"/>
-                                <exclude reference="97v-28-dgh"/>
-                                <exclude reference="Rh2-IJ-dvg"/>
-                                <exclude reference="fma-bY-csO"/>
-                                <exclude reference="zH9-He-PJc"/>
-                                <exclude reference="8nU-8x-Fji"/>
-                                <exclude reference="VB1-ZY-VO4"/>
-                                <exclude reference="h1P-E4-Lfh"/>
-                                <exclude reference="iPp-8w-UxF"/>
-                                <exclude reference="Pf8-aD-FxE"/>
-                                <exclude reference="Zx4-X5-l4U"/>
-                                <exclude reference="Zz7-FM-EfW"/>
-                                <exclude reference="hTi-yw-daA"/>
-                                <exclude reference="Wyl-5i-RLH"/>
-                                <exclude reference="l8d-6K-9Kh"/>
-                                <exclude reference="lSu-Cp-MX6"/>
+                                <exclude reference="HSx-7f-jqp"/>
+                                <exclude reference="QDC-eQ-Z9e"/>
+                                <exclude reference="ad7-zS-jIa"/>
+                                <exclude reference="AxE-vx-eaK"/>
+                                <exclude reference="N1e-Fm-cy9"/>
+                                <exclude reference="d6B-r7-PHm"/>
+                                <exclude reference="Uck-um-I7A"/>
+                                <exclude reference="YHG-RX-Brg"/>
+                                <exclude reference="lDU-Yz-7Lv"/>
+                                <exclude reference="6g9-7o-vXp"/>
+                                <exclude reference="Urb-NB-RKg"/>
+                                <exclude reference="OVk-tT-Qqz"/>
+                                <exclude reference="Sd3-Zg-U6p"/>
+                                <exclude reference="Xqx-Ib-Dzh"/>
+                                <exclude reference="o2T-tM-zoZ"/>
+                                <exclude reference="den-Dh-kCF"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="eMb-iO-gNG"/>
                                 <include reference="vGv-Hg-77Z"/>
                                 <include reference="fey-0e-6k7"/>
                                 <include reference="6Ao-eN-PnZ"/>
                                 <include reference="sk0-jV-q5f"/>
+                                <include reference="eMb-iO-gNG"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="6BW-dC-kat"/>
-                                <include reference="DWa-Ll-8rr"/>
-                                <include reference="kOU-ln-Qwj"/>
-                                <include reference="sOd-ZW-HqT"/>
-                                <include reference="97v-28-dgh"/>
-                                <include reference="Rh2-IJ-dvg"/>
-                                <include reference="fma-bY-csO"/>
-                                <include reference="zH9-He-PJc"/>
-                                <include reference="8nU-8x-Fji"/>
-                                <include reference="VB1-ZY-VO4"/>
-                                <include reference="h1P-E4-Lfh"/>
-                                <include reference="iPp-8w-UxF"/>
-                                <include reference="Pf8-aD-FxE"/>
-                                <include reference="Zx4-X5-l4U"/>
-                                <include reference="Zz7-FM-EfW"/>
-                                <include reference="hTi-yw-daA"/>
-                                <include reference="Wyl-5i-RLH"/>
-                                <include reference="l8d-6K-9Kh"/>
-                                <include reference="lSu-Cp-MX6"/>
+                                <include reference="HSx-7f-jqp"/>
+                                <include reference="QDC-eQ-Z9e"/>
+                                <include reference="ad7-zS-jIa"/>
+                                <include reference="AxE-vx-eaK"/>
+                                <include reference="N1e-Fm-cy9"/>
+                                <include reference="d6B-r7-PHm"/>
+                                <include reference="Uck-um-I7A"/>
+                                <include reference="YHG-RX-Brg"/>
+                                <include reference="lDU-Yz-7Lv"/>
+                                <include reference="6g9-7o-vXp"/>
+                                <include reference="Urb-NB-RKg"/>
+                                <include reference="OVk-tT-Qqz"/>
+                                <include reference="Sd3-Zg-U6p"/>
+                                <include reference="Xqx-Ib-Dzh"/>
+                                <include reference="o2T-tM-zoZ"/>
+                                <include reference="den-Dh-kCF"/>
                             </mask>
                         </variation>
                     </view>
